# libmatrix

./: CMakeLists.txt  README.dev.md  README.md
.github/workflows/: testing.yml
src/example/: CMakeLists.txt  main.c
src/matrix/: matrix.c
test/matrix/: CMakeLists.txt  test_matrix.c
